--- a/RemoveGleam.csproj
+++ b/RemoveGleam.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <AssemblyName>RemoveGleam</AssemblyName>
-    <Description>My first plugin</Description>
+    <Description>Blup</Description>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
